--- a/sass/blocks/_coaches-select.scss
+++ b/sass/blocks/_coaches-select.scss
@@ -130,7 +130,7 @@
             background-image: url('../assets/img/uncheck.svg');
             background-repeat: no-repeat;
             top: 12px;
-            left: 7px;
+            left: 5px;
         }
 
     }
@@ -143,7 +143,7 @@
         background-image: url('../assets/img/check.svg');
         background-repeat: no-repeat;
         top: 12px;
-        left: 7px;
+        left: 5px;
     }
 }
 
